Clarify in the javadocs for modifier and worktable recipes how to handle invalid indices
Also standarize recipes to use `List#of` over `Collections#emptyList`.